# meteoch

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
meteoch/: app.py  asgi.py  calculs.py  compute.py  diffdruck.py  graph.py  mosmix.py  retrieve.py  schemas.py  services.py  topo.py
meteoch/config/: __init__.py  diffdruck.toml  interface.toml  model.save  models_det.toml  models_ens.toml  mosmix.toml  mosmix_stations-2024-02-26.cfg  mosmix_stations-2024-02-26.csv  mosmix_stations-2024-02-26.ods  opendata_dwd.toml  parameters.toml  products.toml  stations.toml
notebooks/: angle.ipynb  diffdruck.ipynb  meteoch.ipynb  read_csv.ipynb  test_wetterdients.ipynb
notebooks/.ipynb_checkpoints/: extract_values-checkpoint.ipynb  meteoch-checkpoint.ipynb
tests/: test_topo.py
