[tool.poetry]
name = "meteoch"
version = "0.1.0"
description = "Visualisation de données météorologiques pour la Suisse"
authors = ["Dominique Stussi <dominique.stussi@ik.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
pandas = "^2.2.0"
requests = "^2.31.0"
pyarrow = "^15.0.0"
pydantic = "^2.6.1"
uvicorn = "^0.27.0.post1"
matplotlib = "^3.8.2"
wetterdienst = "^0.73.0"
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
poetry-plugin-export = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
